fix: [CO-1179] UserServlet force content-disposition attachment when mime-part is scriptable